# cudnn_graph_api_example

./: .gitignore  CMakeLists.txt  README.md  batch_norm.cpp  dropout_2d.c  dropout_4d.c  graph_api_batch_norm_2d.c  graph_api_conv_2.c  graph_api_conv_2d.c  layer_norm.cpp  rnn.cu  utils.c  utils.cpp  utils.h
.ccls-cache/@@home@bokutotu@HDD@CUDA@code/: @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@c++@12@bits@std_abs.h.blob  @usr@include@c++@12@cstdlib.blob  @usr@include@c++@12@stdlib.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  (+49 more)
b/: CMakeCache.txt  Makefile  cmake_install.cmake  graph_api_batch_norm_2d  graph_api_conv_2d
(+3 files in other folders)
